--- a/src/index.css
+++ b/src/index.css
@@ -3,6 +3,7 @@
 @theme {
     --color-google-dark: #131314;
     --color-google-hover: #3c4043;
+
     --color-primary-50: #eff6ff;
     --color-primary-100: #dbeafe;
     --color-primary-200: #bfdbfe;
@@ -14,5 +15,16 @@
     --color-primary-800: #1e40af;
     --color-primary-900: #1e3a8a;
     --color-primary-950: #172554;
+
+    --color-primary-dark-bg: theme(--color-gray-900);
+    --color-secondary-dark-bg: theme(--color-gray-800);
+    --color-dark-border: theme(--color-gray-700);
+
+    --color-primary-dark-btn: theme(--color-primary-600);
+    --color-primary-dark-btn-hover: theme(--color-primary-700);
+
+    --color-dark-input-bg: theme(--color-gray-700);
+    --color-dark-input-border: theme(--color-gray-600);
+    --color-dark-input-placeholder: theme(--color-gray-400);
 }
 
